production first change

--- a/differential.html
+++ b/differential.html
@@ -423,7 +423,7 @@
     <div class="container">
         <h2>Gitlab Repository</h2>
 
-        <img class="max-h-300" src="./assets/img/projects/gitlab-logo.svg" alt="">
+        <img class="max-h-300" href="https://datai.upo.es/gitlab" src="./assets/img/projects/gitlab-logo.svg" alt="">
 
     </div>
 </div>
