--- a/projects.html
+++ b/projects.html
@@ -80,21 +80,22 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom"
+                    <a class="nav-link" rel="tooltip" title="Go to Gitlab" data-placement="bottom"
                        href="https://twitter.com/" target="_blank">
                         <i class="fa fa-twitter"></i>
 
-                        <p class="d-lg-none d-xl-none">Twitter</p>
+                        <p class="d-lg-none d-xl-none">Gitlab</p>
                     </a>
                 </li>
-                <li class="nav-item">
+
+                <!--<li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Log in" data-placement="bottom"
                        href="login-page.html" target="_blank">
                         <i class="now-ui-icons users_single-02"></i>
 
                         <p class="d-lg-none d-xl-none">Log in</p>
                     </a>
-                </li>
+                </li>-->
             </ul>
         </div>
     </div>
