--- a/differential.html
+++ b/differential.html
@@ -75,19 +75,20 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom"
-                       href="https://twitter.com/" target="_blank">
-                        <i class="fa fa-twitter"></i>
+                    <a class="nav-link" rel="tooltip" title="Portainer" data-placement="bottom"
+                       href="https://datai.upo.es/portainer" target="_blank">
+                        <img src="assets/img/portainer.png"/>
 
-                        <p class="d-lg-none d-xl-none">Twitter</p>
+                        <p class="d-lg-none d-xl-none">Portainer</p>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Faceboor" data-placement="bottom"
-                       href="https://facebook.com/" target="_blank">
-                        <i class="fa fa-facebook"></i>
 
-                        <p class="d-lg-none d-xl-none">Facebook</p>
+                <li class="nav-item">
+                    <a class="nav-link" rel="tooltip" title="Gitlab" data-placement="bottom"
+                       href="https://datai.upo.es/gitlab" target="_blank">
+                        <img src="assets/img/gitlab.png"/>
+
+                        <p class="d-lg-none d-xl-none">Gitlab</p>
                     </a>
                 </li>
 
