--- a/profile-page.html
+++ b/profile-page.html
@@ -79,22 +79,23 @@
                     </a>
                 </li>
 
-                <!--<li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom"
-                       href="https://twitter.com/" target="_blank">
-                        <i class="fa fa-twitter"></i>
+                <li class="nav-item">
+                    <a class="nav-link" rel="tooltip" title="Portainer" data-placement="bottom"
+                       href="https://datai.upo.es/portainer" target="_blank">
+                        <img src="assets/img/portainer.png"/>
 
-                        <p class="d-lg-none d-xl-none">Twitter</p>
+                        <p class="d-lg-none d-xl-none">Portainer</p>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Log in" data-placement="bottom"
-                       href="login-page.html" target="_blank">
-                        <i class="now-ui-icons users_single-02"></i>
 
-                        <p class="d-lg-none d-xl-none">Log in</p>
+                <li class="nav-item">
+                    <a class="nav-link" rel="tooltip" title="Gitlab" data-placement="bottom"
+                       href="https://datai.upo.es/gitlab" target="_blank">
+                        <img src="assets/img/gitlab.png"/>
+
+                        <p class="d-lg-none d-xl-none">Gitlab</p>
                     </a>
-                </li>-->
+                </li>
             </ul>
         </div>
     </div>
