--- a/projects.html
+++ b/projects.html
@@ -80,9 +80,18 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Go to Gitlab" data-placement="bottom"
-                       href="https://twitter.com/" target="_blank">
-                        <i class="fa fa-twitter"></i>
+                    <a class="nav-link" rel="tooltip" title="Portainer" data-placement="bottom"
+                       href="https://datai.upo.es/portainer" target="_blank">
+                        <img src="assets/img/portainer.png"/>
+
+                        <p class="d-lg-none d-xl-none">Portainer</p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" rel="tooltip" title="Gitlab" data-placement="bottom"
+                       href="https://datai.upo.es/gitlab" target="_blank">
+                        <img src="assets/img/gitlab.png"/>
 
                         <p class="d-lg-none d-xl-none">Gitlab</p>
                     </a>
