Customization - images & primary,secondary color.

--- a/differential.html
+++ b/differential.html
@@ -98,9 +98,9 @@
 </nav>
 <!-- End Navbar -->
 <div class="wrapper">
-    <div class="page-header clear-filter" filter-color="orange">
+    <div class="page-header clear-filter">
         <div class="page-header-image" data-parallax="false"
-             style="background-image: url('assets/img/projects/differential.png')">
+             style="background-image: url('assets/img/projects/campus4.jpg')">
         </div>
         <div class="container" id="home">
             <div class="content-center brand">
@@ -110,7 +110,7 @@
                 <img class="" src="./assets/img/logo-white.png" alt="">
                 <h3 class="text-white font-weight-bold">Research group</h3>
 
-                <h3>Pablo de Olavide University, School of Engineering</h3>
+                <h3 class="text-white">Pablo de Olavide University, School of Engineering</h3>
 
 
             </div>
