--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="navbar-translate">
             <a class="navbar-brand" href="" rel="tooltip" title="" data-placement="bottom" target="_blank">
-                <img id="nav-image" src="assets/img/logo2.png">
+                <img id="nav-image" src="./assets/img/logo-white.png">
             </a>
             <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
                     aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -128,9 +128,9 @@
 </nav>
 <!-- End Navbar -->
 <div class="wrapper">
-    <div class="page-header clear-filter" filter-color="orange">
+    <div class="page-header clear-filter">
         <div class="page-header-image" data-parallax="false"
-             style="background-image: url('./assets/img/database.jpg');">
+             style="background-image: url('./assets/img/pix.jpg');">
         </div>
         <div class="container" id="home">
             <div class="content-center brand">
