--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@
 </nav>
 <!-- End Navbar -->
 <div class="wrapper">
-    <div class="page-header page-header-small clear-filter" filter-color="orange">
+    <div class="page-header page-header-small clear-filter">
         <div class="page-header-image" data-parallax="false" style="background-image: url('assets/img/projects/lhp.jpg');">
         </div>
     </div>
