Some design changes

--- a/index.html
+++ b/index.html
@@ -79,24 +79,6 @@
                     </a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Portainer" data-placement="bottom"
-                       href="https://datai.upo.es/portainer" target="_blank">
-                        <img src="assets/img/portainer.png"/>
-
-                        <p class="d-lg-none d-xl-none">Portainer</p>
-                    </a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Gitlab" data-placement="bottom"
-                       href="https://datai.upo.es/gitlab" target="_blank">
-                        <img src="assets/img/gitlab.png"/>
-
-                        <p class="d-lg-none d-xl-none">Gitlab</p>
-                    </a>
-                </li>
-
 
                 <!--<li class="nav-item">
                     <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom"
@@ -218,7 +200,7 @@
                 <div class="team">
                     <div class="row">
                         <div class="col-md-4 ">
-                            <div class="team-player border-white-solid img-blackwhite">
+                            <div class="team-player border-white-solid ">
                                 <img src="assets/img/photos/fede.jpeg"
                                      alt="Thumbnail Image" class=" margin-top-10 rounded-circle img-fluid img-raised"
                                      style="max-width: 150px">
@@ -242,7 +224,7 @@
                         </div>
 
                         <div class="col-md-4 ">
-                            <div class="team-player border-white-solid img-blackwhite">
+                            <div class="team-player border-white-solid ">
                                 <img src="assets/img/photos/carlos.jpg"
                                      alt="Thumbnail Image" class=" margin-top-10 rounded-circle img-fluid img-raised"
                                      style="max-width: 150px">
@@ -257,7 +239,7 @@
                                     particularly Fuzzy Logic and Soft Computing, applied to special databases and high
                                     performance in fields as Big Data, flexible querying and imperfect information
                                     management.</p>
-                                <br>
+
                                 <div class="margin-bottom-10">
                                     <a disabled="true"  class="margin-top-10 btn btn-primary btn-round">Show
                                         profile > </a>
@@ -266,7 +248,7 @@
                         </div>
 
                         <div class="col-md-4 ">
-                            <div class="team-player border-white-solid img-blackwhite">
+                            <div class="team-player border-white-solid ">
                                 <img src="assets/img/photos/norberto.jpg"
                                      alt="Thumbnail Image" class=" margin-top-10 rounded-circle img-fluid img-raised"
                                      style="max-width: 150px">
@@ -290,7 +272,7 @@
 
 
                         <div class="col-md-4 margin-top-40">
-                            <div class="team-player border-white-solid img-blackwhite">
+                            <div class="team-player border-white-solid ">
                                 <img src="assets/img/photos/miguel.png"
                                      alt="Thumbnail Image" class=" margin-top-10 rounded-circle img-fluid img-raised"
                                      style="max-width: 150px">
@@ -313,7 +295,7 @@
                         </div>
 
                         <div class="col-md-4 margin-top-40">
-                            <div class="team-player border-white-solid img-blackwhite">
+                            <div class="team-player border-white-solid ">
                                 <img src="assets/img/photos/domingo.jpg"
                                      alt="Thumbnail Image" class=" margin-top-10 rounded-circle img-fluid img-raised"
                                      style="max-width: 150px">
@@ -336,7 +318,7 @@
                         </div>
 
                         <div class="col-md-4 margin-top-40">
-                            <div class="team-player border-white-solid img-blackwhite">
+                            <div class="team-player border-white-solid img">
                                 <img src="assets/img/photos/fran.jpg"
                                      alt="Thumbnail Image" class=" margin-top-10 rounded-circle img-fluid img-raised"
                                      style="max-width: 150px">
@@ -361,7 +343,7 @@
                         </div>
 
                         <div class="col-md-4 margin-top-40">
-                            <div class="team-player border-white-solid img-blackwhite">
+                            <div class="team-player border-white-solid ">
                                 <img src="assets/img/photos/aurelio.jpg"
                                      alt="Thumbnail Image" class=" margin-top-10 rounded-circle img-fluid img-raised"
                                      style="max-width: 150px">
@@ -384,7 +366,7 @@
                         </div>
 
                         <div class="col-md-4 margin-top-40">
-                            <div class="team-player border-white-solid img-blackwhite">
+                            <div class="team-player border-white-solid ">
                                 <img src="assets/img/photos/olga.jpg"
                                      alt="Thumbnail Image" class=" margin-top-10 rounded-circle img-fluid img-raised"
                                      style="max-width: 150px">
@@ -396,7 +378,7 @@
 
                                 <p class="text-sm-center margin-left-10 margin-right-10"> She is working as software analyst & architect and
                                     her research is focused in sensor networks in Big Data enviroments, under the supervision of Prof. Carlos D. Barranco.
-                                    She is interested in fuzzy logic applied to NoSQL databases, IoT and software model and design.
+                                    She is interested in fuzzy logic applied to NoSQL databases, IoT, software modelling and design.
 
                                 </p>
                                 <br>
@@ -730,11 +712,6 @@
                         </script>
                         - All Rights Reserved
                     </div>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="assets/img/logoupoeps.png">
-                    </a>
                 </li>
             </ul>
         </div>
