Some design changes -- Web under construction

--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h2>Some of Our Awesome Projects </h2>
+                    <h2>Some of Our Projects </h2>
                 </div>
             </div>
             <div class="section-story-overview">
