Some design changes -- Web under construction

--- a/differential.html
+++ b/differential.html
@@ -325,7 +325,7 @@
                     <h2 class="text-center">Publications</h2>
 
                     <div class=" col-md-12 text-center">
-                        <div class="col-sm-3 card text-center max-h-300">
+                        <div class="margin-left-10 col-sm-3 card text-center max-h-300">
                             <p><br><br><span class="tag badge-secondary">J.M. Medina</span>
                                 <span class="tag badge-secondary">C.D. Barranco</span>
                                 <span class="tag badge-secondary"> O. Pons.</span></p>
@@ -335,7 +335,7 @@
                                 In press. ISSN 0165-0114. IF: 2.718, Q1.</p></p><br><br></div>
 
 
-                        <div class=" margin-left-40 col-sm-3 card text-center max-h-300">
+                        <div class=" margin-left-10 col-sm-3 card text-center max-h-300">
                             <p><br><br><span class="tag badge-secondary">F. Divina</span>
                                 <span class="tag badge-secondary">A. Gilson</span>
                                 <span class="tag badge-secondary">F. A. Gómez-Vela</span>
@@ -345,7 +345,7 @@
                             <p>Stacking Ensemble Learning for Short-Term Electricity Consumption Forecasting.</p>
                             <p>Energies, 11(4), 949, 2018. IF: 2.262, Q2 (Open access)</p></p><br></div>
 
-                        <div class="margin-left-40 col-sm-3 card text-center max-h-300">
+                        <div class="margin-left-10 col-sm-3 card text-center max-h-300">
                             <p><br><br><span class="tag badge-secondary">J.M. Medina</span>
                                 <span class="tag badge-secondary">C.D. Barranco</span>
                                 <span class="tag badge-secondary"> O. Pons.</span></p>
@@ -355,7 +355,7 @@
                             <p> Fuzzy-IEEE 2018. In press. C2 GGS</p></p><br><br></div>
 
 
-                        <div class="col-sm-3 card text-center max-h-300">
+                        <div class="margin-left-10 col-sm-3 card text-center max-h-300">
                             <p><br><br><span class="tag badge-secondary">J.M. Medina</span>
                                 <span class="tag badge-secondary">C.D. Barranco</span>
                                 <span class="tag badge-secondary"> O. Pons.</span>
@@ -366,7 +366,7 @@
                                 management system.</p>
                             <p> Fuzzy-IEEE 2017. C2 GSS</p></p><br><br></div>
 
-                        <div class=" margin-left-40 col-sm-3 card text-center max-h-300">
+                        <div class=" margin-left-10 col-sm-3 card text-center max-h-300">
                             <p><br><br>
                                 <span class="tag badge-secondary"> R. Arias-Mitchel</span>
                                 <span class="tag badge-secondary"> M. García-Torres</span>
@@ -377,7 +377,7 @@
                             <p>AIS 2016. En clasificación – Core C.</p></p><br><br></div>
 
 
-                        <div class=" margin-left-40 col-sm-3 card text-center max-h-300">
+                        <div class=" margin-left-10 col-sm-3 card text-center max-h-300">
                             <p><br>
                                 <span class="tag badge-secondary"> F. Gómez-Vela</span>
                                 <span class="tag badge-secondary">A. López</span>
@@ -387,7 +387,7 @@
                                 <span class="tag badge-secondary">M. García-Torres</span>
                                 <span class="tag badge-secondary">F. Divina</span>
                             </p>
-                            <p>ioinformatics from a Big Data Perspective: Meeting the
+                            <p>Bioinformatics from a Big Data Perspective: Meeting the
                                 Challenge</p>
                             <p> IWBBIO 2017</p></p><br><br><br></div>
 
@@ -403,6 +403,9 @@
     </div>
 
 </div>
+
+<hr>
+
 
 
 <div class="section" id="contact">
